Fixed some text encoding/decoding edge cases.

--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -4,4 +4,5 @@ com.keithlawless.jukebox.controllers.autoplay=true
 com.keithlawless.jukebox.basedir=file:///C:/Music/
 com.keithlawless.jukebox.filefilter=mp3,flac,m4a
 com.keithlawless.jukebox.default.image=/images/notfound.jpg
+com.keithlawless.jukebox.station.data=/data/stations.json
 
