Build a Lucene search index at startup. Removed "double encoding" of mrl's.

--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -5,4 +5,5 @@ com.keithlawless.jukebox.basedir=file:///C:/Music/
 com.keithlawless.jukebox.filefilter=mp3,flac,m4a
 com.keithlawless.jukebox.default.image=/images/notfound.jpg
 com.keithlawless.jukebox.station.data=/data/stations.json
+com.keithlawless.jukebox.search.index.location=/var/jukebox/index
 
