--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,9 +1,9 @@
 server.servlet.context-path=/api
 
 com.keithlawless.jukebox.controllers.autoplay=true
-com.keithlawless.jukebox.basedir=file:///C:/Music/
+com.keithlawless.jukebox.basedir=file:///Users/keith/Music/
 com.keithlawless.jukebox.filefilter=mp3,flac,m4a
 com.keithlawless.jukebox.default.image=/images/notfound.jpg
 com.keithlawless.jukebox.station.data=/data/stations.json
-com.keithlawless.jukebox.search.index.location=/var/jukebox/index
+com.keithlawless.jukebox.search.index.location=/Users/Keith/var/jukebox/index
 
