Upgrade API to latest Spring Boot version. Upgrade API to Java 17

--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 server.servlet.context-path=/api
 
 com.keithlawless.jukebox.controllers.autoplay=true
-com.keithlawless.jukebox.basedir=file:///Users/keith/Music/
+com.keithlawless.jukebox.basedir=file:///Users/keithlawless/Music/
 com.keithlawless.jukebox.filefilter=mp3,flac,m4a
 com.keithlawless.jukebox.default.image=/images/notfound.jpg
 com.keithlawless.jukebox.station.data=/data/stations.json
