--- a/backend/build.gradle
+++ b/backend/build.gradle
@@ -1,30 +1,25 @@
 plugins {
-	id 'org.springframework.boot' version '2.4.3'
-	id 'io.spring.dependency-management' version '1.0.11.RELEASE'
+	id 'org.springframework.boot' version '3.3.4'
+	id 'io.spring.dependency-management' version '1.1.6'
 	id 'java'
 }
 
 group = 'com.keithlawless'
 version = '1.1.1'
-sourceCompatibility = '1.8'
 
 repositories {
 	mavenCentral()
-	maven {
-		url "https://dl.bintray.com/ijabz/maven"
-	}
 }
 
 dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-web'
-	implementation 'uk.co.caprica:vlcj:4.7.0'
-	implementation 'com.google.guava:guava:30.1-jre'
+	implementation 'uk.co.caprica:vlcj:4.8.3'
+	implementation 'com.google.guava:guava:33.3.1-jre'
 	implementation 'net.jthink:jaudiotagger:3.0.1'
-	implementation group: 'commons-io', name: 'commons-io', version: '2.8.0'
-	implementation group: 'org.apache.lucene', name: 'lucene-core', version: '8.8.1'
-	implementation group: 'org.apache.lucene', name: 'lucene-analyzers-common', version: '8.8.1'
-	implementation group: 'org.apache.lucene', name: 'lucene-queryparser', version: '8.8.1'
-
+	implementation 'commons-io:commons-io:2.17.0'
+	implementation 'org.apache.lucene:lucene-core:9.12.0'
+	implementation 'org.apache.lucene:lucene-analyzers-common:8.11.4'
+	implementation 'org.apache.lucene:lucene-queryparser:9.12.0'
 
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 }
