--- a/frontend/jukebox/package.json
+++ b/frontend/jukebox/package.json
@@ -19,6 +19,7 @@
     "@angular/platform-browser": "^18.2.7",
     "@angular/platform-browser-dynamic": "^18.2.7",
     "@angular/router": "^18.2.7",
+    "@types/ws": "^8.5.12",
     "bootstrap": "^4.6.0",
     "jquery": "^3.5.1",
     "rxjs": "~6.6.0",
